--- a/styles/style.sass
+++ b/styles/style.sass
@@ -1,3 +1,4 @@
 @import abstract/_base.sass
 @import components/_header.sass
 @import components/_about-me.sass
+@import components/_skills-and-certificates.sass
