Creating Certificates carousel

--- a/styles/abstract/_variables.sass
+++ b/styles/abstract/_variables.sass
@@ -3,3 +3,7 @@ $compliment: #002A59
 $accent: #E89B25
 $small-break: 480px
 $large-break: 992px
+$width: calc(100vw - 32px)
+$large-width: calc(50vw - 96px)
+$height: calc($width * .75)
+$large-height: calc($large-width * .75)
