--- a/styles/components/_skills-and-certificates.sass
+++ b/styles/components/_skills-and-certificates.sass
@@ -25,4 +25,4 @@
     @media (min-width: $large-break)
         .skills-and-certificates
             display: grid
-            grid-template-areas: 'skills certificates'
+            grid-template-columns: 50% 50%
