--- a/styles/style.sass
+++ b/styles/style.sass
@@ -2,3 +2,4 @@
 @import components/_header.sass
 @import components/_about-me.sass
 @import components/_skills-and-certificates.sass
+@import components/_certificates-carousel.sass
