--- a/styles/components/_skills-and-certificates.sass
+++ b/styles/components/_skills-and-certificates.sass
@@ -1,12 +1,31 @@
 @import ../abstract/_variables.sass
 
 .skills-and-certificates
+    margin: 32px 0
+
     &__skills
         display: grid
         grid-template-areas: 'one two three'
         justify-content: space-evenly
         padding: 16px 32px
         grid-row-gap: 32px
+        align-items: center
+        margin-bottom: 32px
+        position: relative
+
+        &::before
+            content: "My skills"
+            position: absolute
+            top: -1%
+            right: calc(50vw - 28px)
+            color: $compliment
+            font-family: 'Hind'
+            font-size: 1em
+
+            @media screen and (min-width: $large-break)
+                top: 0
+                right: calc( 25vw - 42.8px )
+                font-size: 1.5em
 
         &__logos
             height: 3em
@@ -26,3 +45,6 @@
         .skills-and-certificates
             display: grid
             grid-template-columns: 50% 50%
+
+            &__skills
+                margin-bottom: 0
