--- a/styles/style.css
+++ b/styles/style.css
@@ -122,12 +122,34 @@ body {
     font-size: 1em;
   }
 }
+.skills-and-certificates {
+  margin: 32px 0;
+}
 .skills-and-certificates__skills {
   display: grid;
   grid-template-areas: "one two three";
   justify-content: space-evenly;
   padding: 16px 32px;
   grid-row-gap: 32px;
+  align-items: center;
+  margin-bottom: 32px;
+  position: relative;
+}
+.skills-and-certificates__skills::before {
+  content: "My skills";
+  position: absolute;
+  top: -1%;
+  right: calc(50vw - 28px);
+  color: #002A59;
+  font-family: "Hind";
+  font-size: 1em;
+}
+@media screen and (min-width: 992px) {
+  .skills-and-certificates__skills::before {
+    top: 0;
+    right: calc(25vw - 42.8px);
+    font-size: 1.5em;
+  }
 }
 .skills-and-certificates__skills__logos {
   height: 3em;
@@ -147,6 +169,9 @@ body {
   .skills-and-certificates {
     display: grid;
     grid-template-columns: 50% 50%;
+  }
+  .skills-and-certificates__skills {
+    margin-bottom: 0;
   }
 }
 .certificates-carousel {
