Creating Contact Me section

--- a/styles/components/_about-me.sass
+++ b/styles/components/_about-me.sass
@@ -23,8 +23,9 @@
     &__text
         grid-area: text
         display: grid
-        grid-template-rows: 35% 55% 10%
+        grid-template-rows: 30% 60% 10%
         margin-top: 1%
+        letter-spacing: 1px
 
         &__heading
             color: $compliment
