--- a/styles/style.sass
+++ b/styles/style.sass
@@ -3,3 +3,4 @@
 @import components/_about-me.sass
 @import components/_skills-and-certificates.sass
 @import components/_certificates-carousel.sass
+@import components/_contact-me.sass
