--- a/styles/components/_contact-me.sass
+++ b/styles/components/_contact-me.sass
@@ -1,5 +1,4 @@
 .contact-me
-    min-height: 80vh
     position: absolute
     width: 100%
     background-color: $compliment
@@ -60,3 +59,42 @@
 
         @media screen and (min-width: 600px)
             width: 282px
+
+.notification
+    position: relative
+    background-color: #fff
+    color: $compliment
+    width: 50vw
+    height: 25vh
+    padding: 16px
+    text-align: center
+    border-radius: 5px
+    left: 25%
+    bottom: calc(55vh + 32px)
+    margin-bottom: -25vh
+    display: flex
+    flex-direction: column
+    justify-content: space-evenly
+    box-sizing: border-box
+    border: 2px solid $dominant
+
+    &__message
+        font-family: 'Hind'
+        font-size: 1em
+        letter-spacing: 1px
+
+    &__ok
+        width: 52px
+        align-self: center
+        border: none
+        border-radius: 5px
+        height: 26px
+        background-color: #E89B25
+        color: #002A59
+    
+    @media screen and (min-width: $small-break)
+        padding: 32px
+        bottom: calc(55vh + 64px)
+
+        &__message
+            font-size: 2em
