--- a/styles/style.css
+++ b/styles/style.css
@@ -256,7 +256,6 @@ body {
 }
 
 .contact-me {
-  min-height: 80vh;
   position: absolute;
   width: 100%;
   background-color: #002A59;
@@ -324,5 +323,47 @@ body {
 @media screen and (min-width: 600px) {
   .contact-me__button {
     width: 282px;
+  }
+}
+
+.notification {
+  position: relative;
+  background-color: #fff;
+  color: #002A59;
+  width: 50vw;
+  height: 25vh;
+  padding: 16px;
+  text-align: center;
+  border-radius: 5px;
+  left: 25%;
+  bottom: calc(55vh + 32px);
+  margin-bottom: -25vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  border: 2px solid #008AC3;
+}
+.notification__message {
+  font-family: "Hind";
+  font-size: 1em;
+  letter-spacing: 1px;
+}
+.notification__ok {
+  width: 52px;
+  align-self: center;
+  border: none;
+  border-radius: 5px;
+  height: 26px;
+  background-color: #E89B25;
+  color: #002A59;
+}
+@media screen and (min-width: 480px) {
+  .notification {
+    padding: 32px;
+    bottom: calc(55vh + 64px);
+  }
+  .notification__message {
+    font-size: 2em;
   }
 }/*# sourceMappingURL=style.css.map */
