Creating About Me page

--- a/styles/components/_contact-me.sass
+++ b/styles/components/_contact-me.sass
@@ -91,6 +91,7 @@
         height: 26px
         background-color: #E89B25
         color: #002A59
+        cursor: pointer
     
     @media screen and (min-width: $small-break)
         padding: 32px
