--- a/styles/style.sass
+++ b/styles/style.sass
@@ -4,3 +4,4 @@
 @import components/_skills-and-certificates.sass
 @import components/_certificates-carousel.sass
 @import components/_contact-me.sass
+@import components/_my-history
